# dauphinscrape

./: .dockerignore  Dockerfile  README.md  pyproject.toml  scrapy.cfg
dauphinscrape/: items.py  schedulelogger.py  settings.py  utils.py
dauphinscrape/spiders/: jail.py
src/: dauphin_scrape.py  models.py  regexes.py
