[tool.poetry]
name = "dauphinscrape"
version = "0.1.0"
description = "Scrape the Dauphin Co. inmate locator"
authors = ["Ethan Corey <ethanscorey@gmail.com>"]
license = "MIT"
packages = [
    { include = "src" },
    { include = "src/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
