[tool.poetry]
name = "dauphinscrape"
version = "0.1.0"
package-mode = false
description = "A Scrapy project for scraping the Dauphin County jail website."
authors = ["Ethan Corey <ethanscorey@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
boto3 = "^1.28.62"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
nox = "^2023.4.22"
mypy = "^1.5.1"
flake8 = "^6.1.0"
coverage = "^7.3.2"
flake8-bugbear = "^23.9.16"
flake8-comprehensions = "^3.14.0"
flake8-simplify = "^0.21.0"
isort = "^5.12.0"
nox-poetry = "^1.0.3"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
